Fixed missing scrollbar in the Version History widget (#2546)

--- a/src/main/resources/assets/styles/view/context/widget-view.less
+++ b/src/main/resources/assets/styles/view/context/widget-view.less
@@ -1,6 +1,5 @@
 .widget-view {
-  height: 100%;
-  overflow: hidden;
+  height: auto;
   transition: all 0.1s ease-in-out;
 
   &:not(.active) {
